@@ -33,16 +33,25 @@ compose {
                     jvmArgs("--add-opens", "java.desktop/sun.awt.X11=ALL-UNNAMED")
                     jvmArgs("--add-opens", "java.desktop/sun.awt.wl=ALL-UNNAMED")
                 }
+                Host.MAC -> {
+                    jvmArgs("--add-opens", "java.desktop/sun.awt=ALL-UNNAMED")
+                    jvmArgs("--add-opens", "java.desktop/sun.lwawt=ALL-UNNAMED")
+                    jvmArgs("--add-opens", "java.desktop/sun.lwawt.macosx=ALL-UNNAMED")
+                }
                 else -> { }
             }
+            jvmArgs("--add-opens", "java.desktop/java.awt.peer=ALL-UNNAMED")
 
             nativeDistributions {
                 packageName = "Burning-Series"
                 packageVersion = appVersion
-                outputBaseDir.set(rootProject.buildDir.resolve("release"))
+                outputBaseDir.set(rootProject.layout.buildDirectory.asFile.get().resolve("release"))
                 description = "Watch any series from Burning-Series using this (unofficial) app."
                 copyright = "© 2020 Jeff Retz (DatLag). All rights reserved."
                 licenseFile.set(rootProject.file("LICENSE"))
+
+                outputBaseDir.set(rootProject.layout.buildDirectory.asFile.get().resolve("release"))
+                appResourcesRootDir.set(project.layout.projectDirectory.dir("resources"))
 
                 when (getHost()) {
                     Host.Linux -> targetFormats(
